--- a/config.json
+++ b/config.json
@@ -1,6 +1,17 @@
 {
   "token": "USE_ENV",
-  "guild_id": "",
-  "payment_channel": "",
-  "admin_channel": ""
+  "guild_id": "1358500246300135466",
+  "payment_channel": "1433762345058041896",
+  "admin_channel": "1433789961403895999",
+
+  "roles": {
+    "1": "1433747080660258867",
+    "3": "1433747173039804477",
+    "7": "1433747209475719332",
+    "15": "1433747247295889489",
+    "30": "1433747281932189826"
+  },
+
+  "bank_image": "https://img5.pic.in.th/file/secure-sv1/b3353abf-04b1-4d82-a806-9859e0748f24-1.webp",
+  "truemoney_phone": "0808432571"
 }
