--- a/config.json
+++ b/config.json
@@ -12,6 +12,6 @@
     "30": "1433747281932189826"
   },
 
-  "bank_image": "https://img5.pic.in.th/file/secure-sv1/b3353abf-04b1-4d82-a806-9859e0748f24-1.webp",
+  "bank_image": "https://img5.pic.in.th/file/secure-sv1/b3353abf-04b1-4d82-a806-9859e0748f24-141791c1eba60e1f3.th.webp",
   "truemoney_phone": "0808432571"
 }
